--- a/IntersysExercise/IntersysExercise/Views/Home/Index.cshtml
+++ b/IntersysExercise/IntersysExercise/Views/Home/Index.cshtml
@@ -1,24 +1,53 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+﻿@{
+    ViewBag.Title = "Home Page";
+}
+
+<div class="row">
+    <input id="input" type="text" />
+    <button id="button" type="button">Guzik</button>
 </div>
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
+    <table class="blueTable" id="output">
+        <thead>
+            <tr>
+                <th>L.p.</th>
+                <th>Wartość</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 </div>
+
+@section scripts {
+    <script>
+        var tableCounter = 2;
+
+        $("#button").click(function () {
+            var text = $("#input").val();
+            addRecordToOutput(text);
+        });
+
+        function addRecordToOutput(record) {
+            var tableElement = $("#output");
+            var tableBody = tableElement.find("tbody").first();
+            var lastCell = tableBody.find("td").last();
+
+            if (lastCell.text() == "")
+                lastCell.text(record);
+            else {
+                var newRow = $("<tr></tr>");
+                var counterCell = $("<td></td>").text(tableCounter);
+                var valueCell = $("<td></td>").text(record);
+                newRow.append(counterCell);
+                newRow.append(valueCell);
+                tableBody.append(newRow);
+                tableCounter++;
+            }
+        }
+    </script>
+}
