--- a/IntersysExercise/IntersysExercise/Views/Home/Index.cshtml
+++ b/IntersysExercise/IntersysExercise/Views/Home/Index.cshtml
@@ -9,5 +9,6 @@
         <li>@Html.ActionLink("Część 1", "Part1")</li>
         <li>@Html.ActionLink("Część 2", "Part2")</li>
         <li>@Html.ActionLink("Część 3", "Part3")</li>
+        <li>@Html.ActionLink("Część 4", "Part4")</li>
     </ul>
 </div>
